--- a/p/pr/pri/priacta.com.html
+++ b/p/pr/pri/priacta.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the priacta.com privacy policy that was archived on 2007-11-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071105013950id_/http%3A//www.priacta.com/Information/Privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the priacta.com privacy policy that was archived on 2008-01-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080131145235id_/http%3A//www.priacta.com/Information/Privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<!-- top boxes on index page -->
@@ -9,6 +9,7 @@
   <!-- Stylesheet includes for two tiers -->
   <link href="../css/all.css" rel="stylesheet" type="text/css">
   <style media="all" type="text/css">@import "../css/all.css";</style>
+  <link rel="shortcut icon" href="../favicon.ico">
   <link href="css/all.css" rel="stylesheet" type="text/css">
   <style media="all" type="text/css">@import "css/all.css";</style>
 
@@ -18,9 +19,10 @@
 <script type="text/javascript">
 // Determine if the affiliate ID is in the URL
 var qStr = window.location.search;
-var qRef = 'affiliate_ref=';
 var qVal = '';
-var nAffilPos = qStr.indexOf(qRef);
+var qRef = 'ref='; //query param
+var cRef = 'affiliate_ref='; //cookie param
+var nAffilPos = qStr.indexOf(qRef); //also matches end of any longer parameter
 if (nAffilPos != -1)
 var nAffilEnd = qStr.indexOf("&", nAffilPos+qRef.length);
 if (nAffilEnd == -1) qVal = qStr.substring(nAffilPos+qRef.length, qStr.length);
@@ -29,8 +31,8 @@ if (nAffilEnd == -1) qVal = qStr.substring(nAffilPos+qRef.length, qStr.length);
 days = 30; // Days before deleting it.
 var date = new Date();
 date.setTime(date.getTime()+(days*24*60*60*1000));
-var expires = '; expires='+date.toGMTString()+'; path=/';
-document.cookie = 'affiliate_ref='+qVal+expires;
+var expires = '; expires='+date.toGMTString()+'; path=/catalog/';
+document.cookie = cRef+qVal+expires;
 }
 </script><script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
   </script><script type="text/javascript">
@@ -52,48 +54,72 @@ document.cookie = 'affiliate_ref='+qVal+expires;
 			<div class="logo-slogan">
 	<h1><a href="http://www.priacta.com/index.shtml">Priacta</a></h1>
 	<div class="slogan-box">
-		<h2><span>Accomplish</span> more. <em>Clear</em> your desk and your mind. <strong>Manage</strong> astonishing workloads without the stress.</h2>
+		<a href="http://www.priacta.com/Training" style="text-decoration:none; cursor:pointer;"><h2><span>Clear</span> your mind. &nbsp;&nbsp;&nbsp;<em>Focus</em> on what's most important.<br>
+		<u>Balance</u> your life. &nbsp;&nbsp;<strong>Accomplish</strong> more with less stress.</h2></a>
 	</div>
 </div>
 			<!-- left inner box with text and headings -->
 			<div class="left-inner-box">
 				<h3>Time Management Coaching</h3>
-				<a href="../Coaching/">
-					<h4>Total, Relaxed Organization<sup>TM</sup></h4>
-					<p>Relief in an hour. Power in a day. Permanent habits in 3 weeks. 
-					TRO training puts you in relaxed control of your work. On-site, remote, 
-					or self training. <b><font color="#FF0000">(Up to 40% Off! Act now...)</font></b></p>
-				</a>
-				<a href="../Support/">
-					<h4>Support</h4>
-					<p>Change is hard, and supporting you is one of our top priorities. 
-					Visit our support page to learn about our support options.</p>
-				</a>
+				<a href="/Training">
+	<h4>Total, Relaxed Organization<sup>TM</sup></h4>
+	<p><font color="#FF0000"><b>Relief in an hour.</b></font> Power in a day. Permanent habits in 3 weeks. 
+	TRO training puts you in relaxed control of your work. On-site, remote, 
+	or self training. Click for details.</p>
+</a>
+
+
+				<a href="/Support/">
+	<h4>Support</h4>
+	<p>Change can be hard. so supporting you is one of our top priorities. 
+	Visit our support page to learn about our support options.</p>
+</a>
+
+
+				<p>&nbsp;</p>
 				<h3>Time Management Software</h3>
-				<a href="../trog/Free_Software_Download.shtml">
-					<h4>The Trog Bar</h4>
-					<p>Email and task relief in 15 minutes. <b><font color="#FF0000">$40 value, FREE for a limited 
-					time.</font></b> Patent pending technology automatically streamlines your workload 
-					in Outlook.</p>
-				</a>
+				<a href="/trog/Free_Software_Download.shtml?src=logo">
+	<img src="/images/trog-splash-logo-261.jpg" alt="Download Trog Bar. Free 30 Day Trial." title="Download Trog Bar. Free 30 Day Trial.">	
+</a>			
+
+
+				<a href="/trog/Free_Software_Download.shtml">
+    <h4>The Trog Bar</h4>
+    <p>Download now, feel relief in 15 minutes with our 
+	intuitive time management sidebar. Automatically streamlines your workload 
+	in Outlook. <font color="#FF0000"><b>Free to try.</b></font></p>
+</a>
+
+
+				<p>&nbsp;</p>
 				<h3>More About Priacta</h3>
-				<a href="../catalog/affiliate_info.php">
-					<h4>Affiliate Program</h4>
-					<p>Earn exceptional commissions while helping others gain control of their time and tasks.</p>
-				</a>
-				<a href="../Information/Career.shtml">
-					<h4>Become a TRO Coach</h4>
-					<p>Analytical? Good listener? Want to telecommute? This could be your dream career.</p>
-				</a>
-				<a href="../Information/Career.shtml">
-					<h4>Other Careers at Priacta</h4>
-					<p>Do our Values describe you perfectly? Check out opportunities at Priacta.</p>
-				</a>
-				<a href="../Information/Priacta.shtml">
-					<h4>Our Mission and Values</h4>
-					<p>Our mission: Expedite the world's work. (And we're having 
-					fun while we're at it...)</p>
-				</a>
+				<a href="/Information/Priacta.shtml">
+	<h4>Our Mission and Values</h4>
+	<p>Priacta's mission is to expedite the world's work. We're having 
+	fun in the process. Find out more about us.</p>
+</a>
+
+
+				<a href="/catalog/affiliate_info.php">
+	<h4>Affiliate Program</h4>
+	<p>Earn exceptional commissions while helping others gain control of their time and tasks.</p>
+</a>
+
+
+
+				<a href="/Information/Career.shtml">
+	<h4>Become a TRO Coach</h4>
+	<p>Analytical? Good listener? Like to teach, coach, or mentor? Like telecommuting? This could be your dream career.</p>
+</a>
+
+
+
+				<a href="/Information/Career.shtml">
+	<h4>Careers at Priacta</h4>
+	<p>Do our Values describe you perfectly? Want a full telecomuting position? Check out opportunities at Priacta.</p>
+</a>
+
+
 			</div>
 			<!-- center inner box -->
 			<div class="center-inner-box">
@@ -105,8 +131,8 @@ document.cookie = 'affiliate_ref='+qVal+expires;
 <p style="margin-left: 20px;">
 Data Integrity<br>
 Priacta, Inc.<br>
-11506 Allecingie Pkwy, 2B<br>
-Richmond, VA 23235</p>
+2975 Elioch Manor Drive<br>
+Powhatan, VA 23139</p>
 
 <p>or e-mail dataintegrity@priacta.com. You may also contact us via our main website, <a href="http://www.priacta.com">www.priacta.com</a>.</p>
 
@@ -185,23 +211,24 @@ Richmond, VA 23235</p>
 		<!-- footer -->
 		<div class="footer">
 			<ul class="footer-ul">
-	<li id="first-foot"><a href="http://www.priacta.com/Coaching/">TRAINING</a></li>
+	<li id="first-foot"><a href="http://www.priacta.com/Training/">TRAINING</a></li>
   <li><a href="http://www.priacta.com/trog/">SOFTWARE</a></li>
 	<li><a href="http://www.priacta.com/trog/Free_Software_Download.shtml">DOWNLOAD</a></li>
 	<li><a href="http://www.priacta.com/catalog/">CATALOG</a></li>
 	<li><a href="http://www.priacta.com/Support/">SUPPORT</a></li>
 	<li><a href="http://www.priacta.com/Information/Priacta.shtml">COMPANY</a></li>
   <li><a href="http://www.priacta.com/Information/Privacy.shtml">PRIVACY</a></li>
-  <li>Copyright 2007 Priacta Inc. All Rights Reserved.</li>   
+  <li><a href="http://www.priacta.com/Information/Terms.shtml">TERMS OF USE</a></li>
+  <li>Copyright 2008 Priacta Inc.</li>   
 </ul>
 <br>
 <div class="subfooter">
-  <!--Put more stuff in here, like SSL verification or moneyback gaurentee-->
+  <!--Put more stuff in here, like SSL verification or money-back guarantee-->
 </div>
 		</div>&nbsp;
 		<ul class="navigation">
 	<li class="first-nav"><a href="http://www.priacta.com/index.shtml">HOME</a></li>
-	<li><a href="http://www.priacta.com/Coaching">TRAINING</a></li>
+	<li><a href="http://www.priacta.com/Training">TRAINING</a></li>
 	<li><a href="http://www.priacta.com/trog">SOFTWARE</a></li>
 	<li><a href="http://www.priacta.com/trog/Free_Software_Download.shtml">DOWNLOAD</a></li>
 	<li><a href="http://www.priacta.com/catalog/">CATALOG</a></li>
@@ -211,8 +238,7 @@ Richmond, VA 23235</p>
 </ul>
 		<ul class="breadcrumbs">
 			<li><strong>Home Page :</strong></li>
-			<li>About Priacta</li>
-			<li>Privacy</li>
+			<li>Privacy Policy</li>
 		</ul>
 	</div>
 
