--- a/s/se/see/seek.co.nz.html
+++ b/s/se/see/seek.co.nz.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the seek.co.nz privacy policy that was archived on 2007-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071213030648id_/http%3A//www.seek.co.nz/general_id_items/content/privacy.ascx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the seek.co.nz privacy policy that was archived on 2008-02-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080206233113id_/http%3A//www.seek.co.nz/general_id_items/content/privacy.ascx) for the most accurate reproduction.-->
 
 <html><head>
 		<title>SEEK - Privacy Statement</title>
@@ -152,6 +152,7 @@ if (loggedIn != null && username != null)
 <div style="clear:both"></div>
 
 
+
 			<span id="sidenav_PriNavigation"></span><table width="100%">
 				<tbody><tr>
 					
@@ -230,7 +231,7 @@ if (loggedIn != null && username != null)
       SEEK syndicates its content to, and distributes its content through, other sites on the Internet. Your activity on these sites is covered by the privacy statement on the site in question.<p></p>
   </li><li>
     <h2 class="heading2">Delete/Unsubscribe Information</h2>
-      To cancel your SEEK  registration, simply send an email to <a href="mailto:userhelp@seek.com.au?subject=Delete%20my%20registration%20with%20SEEK">userhelp@seek.com.au</a> with 'Delete my registration with SEEK' in the subject line. Please include the  username for your account in the body of the email.<p></p>
+      To cancel your SEEK  registration, simply send an email to <a href="mailto:userhelp@seek.co.nz?subject=Delete%20my%20registration%20with%20SEEK">userhelp@seek.co.nz</a> with 'Delete my registration with SEEK' in the subject line. Please include the  username for your account in the body of the email.<p></p>
   </li><li>
     <h2 class="heading2">Change/Modify Information</h2>
       You can change or modify  information previously provided from your <a href="/myseek/MyAccount.ascx">My Account</a> page. For more information visit <a href="/seek_help.asp" target="main">SEEK Help</a>. <p></p>
@@ -253,7 +254,8 @@ if (loggedIn != null && username != null)
 <br>
 <br>
 </span>
-						<script language="javascript">
+						
+<script language="javascript">
 	var curPage = document.location.pathname.toLowerCase();
 	var investorPos = curPage.indexOf("investor");
 	var careerPos = curPage.indexOf("career-resources");
@@ -285,6 +287,8 @@ if (loggedIn != null && username != null)
   </div><br clear="all">
   <div id="skmainhp_disclaim" style="margin-top:20px;">*Excludes SEEK Executive ads</div>
 </div>
+
+
 <!-- START Nielsen//NetRatings SiteCensus V5.1 -->
 <!-- COPYRIGHT 2005 Nielsen//NetRatings -->
 <script language="JavaScript" type="text/javascript">
@@ -365,7 +369,7 @@ if (!_loaded)
 	
 	_loaded=true;
 }
-//--></script><script language="javascript" type="text/javascript" src="/omniture/s_code.js"></script><img name="s_i_seekskmnzprd" height="1" width="1" border="0" alt="" src="https://info.seek.com/b/ss/seekskmnzprd,seekglobalprd/1/H.9-Pdvu-2/s73869959800763?[AQB]&amp;ndh=1&amp;t=1/1/2020%209%3A23%3A53%206%200&amp;ns=seek&amp;cdp=3&amp;g=https%3A//web.archive.org/web/20071213030648id_/http%253A//www.seek.co.nz/general_id_items/content/privacy.ascx&amp;cc=AUD&amp;server=web.archive.org&amp;c1=job&amp;h1=job%7Cnz%7Cskmnz&amp;c2=nz&amp;v2=job&amp;c3=skmnz&amp;v3=nz&amp;v4=skmnz&amp;c7=untaggedpage&amp;c50=https%3A//web.archive.org/web/20071213030648id_/http%253A//www.seek.co.nz/general_id_items/content/privacy.ascx&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]"><script language="javascript" type="text/javascript" src="/omniture/setvars.js"></script>
+//--></script><script language="javascript" type="text/javascript" src="/omniture/s_code.js"></script><img name="s_i_seekskmnzprd" height="1" width="1" border="0" alt="" src="https://info.seek.com/b/ss/seekskmnzprd,seekglobalprd/1/H.9-Pdvu-2/s78946175871190?[AQB]&amp;ndh=1&amp;t=1/1/2020%209%3A23%3A53%206%200&amp;ns=seek&amp;cdp=3&amp;g=https%3A//web.archive.org/web/20080206233113id_/http%253A//www.seek.co.nz/general_id_items/content/privacy.ascx&amp;cc=AUD&amp;server=web.archive.org&amp;c1=job&amp;h1=job%7Cnz%7Cskmnz&amp;c2=nz&amp;v2=job&amp;c3=skmnz&amp;v3=nz&amp;v4=skmnz&amp;c7=untaggedpage&amp;c50=https%3A//web.archive.org/web/20080206233113id_/http%253A//www.seek.co.nz/general_id_items/content/privacy.ascx&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]"><script language="javascript" type="text/javascript" src="/omniture/setvars.js"></script>
 
 <noscript><a href="http://www.omniture.com" title="Web Analytics"><img
 src="http://info.seek.com/b/ss/"+s_account+"/1/H.9--NS/0?[AQB]&cdp=3&[AQE]"
