--- a/t/tv/tvg/tvguide.co.uk.html
+++ b/t/tv/tvg/tvguide.co.uk.html
@@ -1,79 +1,133 @@
-<!--The following is the downloaded HTML source of the tvguide.co.uk privacy policy that was archived on 2007-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071211233849id_/http%3A//www.tvguide.co.uk/privacy.asp%3Fthistime%3D%26thisDay%3D) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tvguide.co.uk privacy policy that was archived on 2008-02-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080208134116id_/http%3A//www.tvguide.co.uk/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
-<title>TVGuide.co.uk -  Privacy Policy</title>
-<style type="text/css">
-BODY
-{
-    FONT-FAMILY: Arial;
-    FONT-SIZE: 12px
-}
-TD
-{
-    FONT-FAMILY: Arial;
-    FONT-SIZE: 12px
-}
-A
-{
-    TEXT-DECORATION: none
-}
-A:hover
-{
-    TEXT-DECORATION: underline
-}
-INPUT
-{
-    BORDER-BOTTOM: medium none;
-    BORDER-LEFT: medium none;
-    BORDER-RIGHT: medium none;
-    BORDER-TOP: medium none;
-    COLOR: black;
-    FONT-FAMILY: Tahoma, Helvetica, Sans-serif;
-    FONT-SIZE: 12px
-}
-TEXTAREA
-{
-    COLOR: navy;
-    FONT-FAMILY: Tahoma, Helvetica, Sans-serif;
-    FONT-SIZE: 12px
-}
-SELECT
-{
-    BACKGROUND-COLOR: white;
-    BORDER-BOTTOM: navy 2px solid;
-    BORDER-LEFT: navy 2px solid;
-    BORDER-RIGHT: navy 2px solid;
-    BORDER-TOP: navy 2px solid;
-    COLOR: black;
-    FONT-FAMILY: Tahoma, Helvetica, Sans-serif;
-    FONT-SIZE: 12px;
 
-}
-.BUTTON
-{
-    BACKGROUND-COLOR: #00cc99;
-    BORDER-BOTTOM: black 2px solid;
-    BORDER-LEFT: black 2px solid;
-    BORDER-RIGHT: black 2px solid;
-    BORDER-TOP: black 2px solid;
-    COLOR: black;
-    FONT-FAMILY: Tahoma, Helvetica, Sans-serif;
-    FONT-SIZE: 11px;
+<title>Advertise on TVGuide.co.uk - TV Guide UK TV Listings</title>
 
-}
-</style>
+
+<meta name="Title" content="TV Guide UK TV Listings for today in Grid format"><!--TV Guide and TV Listings for Freeview, Sky and Virgin-->
+<meta name="Description" content="TV listings at TV Guide UK showing your TV listings in an easy to read grid format. Now you can view multiple channels at the same time!">
+<meta name="Keywords" content="tv listings,tvlistings, sky,bbc,itv,channel,five, five,channel4,itv2,itv3,itv4,bbc3,bbc4,lost, heroes, big brother, virgin media, 24,sky one,more4,e4,tv listing,film4,cable,digital,tvguide,tv,guide,times,livingtv,film,films,online,uk tv listings,freeview,news,movies,movie,premiere,football,documentary,discovery,what's on t ,bskyb,sci-fi,one">
+<meta name="Language" content="EN">
+<meta name="Author" content="TVGuide">
+<meta name="Expires" content="Never">
+<meta name="Robots" content="All">
+<link rel="stylesheet" type="text/css" href="styleheader.css">
 </head>
-<body bgcolor="white" text="black" link="black" vlink="black" alink="black" topmargin="0">
-<table>
+<body topmargin="0" leftmargin="0">
+
+<!--
+<table border="0" width="100%" cellspacing="0" cellpadding="0" bgcolor=000>
+<tr><td>
+&nbsp;<a href="http://www.surveymonkey.com/s.aspx?sm=lK03xerafKOYFFTW63AzYA_3d_3d" target="_blank"><span class=tvchannel>Click to take the TVGuide Survey >></span></a>
+</td></tr></table>-->
+<table border="0" width="100%" cellspacing="0" cellpadding="0">
+		<tbody><tr>
+		<td>
+		<table border="0" width="100%" height="102" cellspacing="0" cellpadding="0" background="images/bg_top.gif">
+			<tbody><tr>
+				<td width="200"><a href="/"><img border="0" src="images/heart.gif" width="200" height="102" alt="Click for the TV Listings now"></a></td>
+				<td>
+
+<!-- begin ad tag (tile=1) -->
+
+<script language="JavaScript" src="http://ad.doubleclick.net/adj/4186.TVGuide/IASHStandard_TOP;sz=728x90,468x60;tvgg=u;page=privacy;fst=u;fet=u;tvgsw=u;tile=1;dcopt=ist;sz=728x90;ord=4127500236?" type="text/javascript"></script>
+
+<noscript>
+<a href="http://ad.doubleclick.net/jump/4186.TVGuide/IASHStandard_TOP;sz=728x90,468x60;tvgg=u;page=privacy;fst=u;fet=u;tvgsw=u;tile=1;sz=728x90;ord=4127500236?" target="_blank"><img src="http://ad.doubleclick.net/ad/4186.TVGuide/IASHStandard_TOP;sz=728x90,468x60;tvgg=u;page=privacy;fst=u;fet=u;tvgsw=u;tile=1;sz=728x90;ord=4127500236?" width="728" height="90" border="0" alt=""></a></noscript>
+<!-- End ad tag -->
+
+
+
+</td>
+			</tr>
+		</tbody></table>
+		</td>
+	</tr>
+	<tr><td>
+		<table border="0" width="100%" cellspacing="0" cellpadding="0" background="images/bg_tab.gif">
+		<tbody><tr>
+<td width="104">		
+<div id="tabsF1">
+  <ul>
+    <li><a href="/" title="Home"><span class="tabtext">Home</span></a></li>
+  </ul>
+</div>	   
+</td>   
+<td width="147">	   
+<div id="tabsF2">
+  <ul>
+    <li><a href="/seriesguide.asp" title="Soap Watch"><span class="tabtext">Soap Watch</span></a></li>
+  </ul>
+</div></td>	   
+<td>	   
+<div id="tabsF3">
+  <ul>
+    <li><a href="upcomingfilms.asp" title="Upcoming Films"><span class="tabtext">Upcoming Films</span></a></li>
+    <li><a href="toprated3.asp" title="Top Rated TV Shows"><span class="tabtext">Top Rated</span></a></li>
+	<li><a href="showreviews.asp" title="Recent Reviews"><span class="tabtext">Recent Reviews</span></a></li>
+<li><a href="TVHighlights.asp" title="TV Highlights"><span class="tabtext">Highlights</span></a></li>
+<li><a href="discuss.asp" title="Discuss TV Shows"><span class="tabtext">Discuss</span></a></li>
+<li><a href="bestTVof2007.asp" title="Best TV of 2007"><span class="tabtext">Best TV of 2007</span></a></li>
+
+  </ul>
+</div></td>
+			<td align="right" width="10"><img border="0" src="images/table_final.gif" width="10" height="29" alt=""></td>
+</tr></tbody></table>
+</td></tr></tbody></table>	
+<table border="0" width="100%" cellspacing="0" cellpadding="0" background="images/bg_tab2.gif" height="26">
+<form name="search" method="get" action="/search.asp?thistime=&amp;thisDay=&amp;gridSpan=" align="right"></form>
 <tbody><tr>
-<td>
-<img src="/images/tvguide_logo.gif" alt="TV Guide" border="0" width="287" height="78"></td>
+				<td>
+				&nbsp;&nbsp;&nbsp; 
+				<a class="2ndnav" href="comments.asp">Feedback</a>&nbsp;|&nbsp;
+				<a class="2ndnav" href="/login.asp">Login</a>
+		<script language="javascript">
+			var ie = document.all ? true : false;
+			if (ie)
+			{
+				var url = "http://www.tvguide.co.uk";
+				var title = "TVGuide.co.uk - UK's Online TV Guide";
+				linkHTML = "&nbsp;|&nbsp;<A class=2ndnav HREF='javascript:window.external.AddFavorite(url,title);'";
+				linkHTML = linkHTML + "ONMOUSEOVER=\" window.status='Add Tvguide to my favourites'; return true;\"";
+				linkHTML = linkHTML + "ONMOUSEOUT=\"window.status=''; return true;\"";
+				linkHTML = linkHTML + ">";
+				linkHTML = linkHTML + "Bookmark</A> ";
+				linkHTML = linkHTML + "&nbsp;|&nbsp;"
+				linkHTML = linkHTML + "<A  class=2ndnav HREF='' style=\"cursor:hand;\""
+				linkHTML = linkHTML + "ONMOUSEOVER=\"window.status='Set TVGuide as my homepage'; return true;\"";
+				linkHTML = linkHTML + "ONMOUSEOUT=\" window.status=''; return true;\"";
+				linkHTML = linkHTML + "onclick=\"this.style.behavior=\'url(#default#homepage)\';this.setHomePage(\'http://www.tvguide.co.uk\'); \"";
+				linkHTML = linkHTML + "ONMOUSEUP=\" return true;\">";
+				linkHTML = linkHTML + " Set&nbsp;Homepage</A>";
+				document.write(linkHTML);
+			}
+			</script>	</td>
+				<td width="390"><font face="Arial" color="#FFFFFF">
+				<span style="font-size: 0.8em;font-weight:bold">Search TV Listings, Films &amp; Actors</span></font>
+				<input type="text" name="title" size="15" maxlength="150" style="color:#5ca9c8 ;font-family: Arial; font-size: 1.0em; height: 22; width: 120">
+				<input type="image" name="submit" border="0" src="images/b_gonew.gif" alt="Go" height="16" width="32"></td>
+
 </tr>
-</tbody></table>	
-<table width="800">
-<tbody><tr><td>
-<h1>TVGuide.co.uk Privacy Policy</h1>
+	</tbody></table>
+
+
+<table bgcolor="black" width="100%" cellpadding="20">
+
+<tbody><tr valign="top"><td>
+
+<!-- begin ad tag (tile=3) -->
+
+<script language="JavaScript" src="http://ad.doubleclick.net/adj/4186.TVGuide/IASHStandard_Side1;sz=300x250,160x600,120x600,300x500;tvgg=u;page=privacy;fst=u;fet=u;tvgsw=u;tile=3;sz=300x250;ord=4127500236?" type="text/javascript">
+</script>
+
+<noscript><a href="http://ad.doubleclick.net/jump/4186.TVGuide/IASHStandard_Side1;sz=300x250,160x600,120x600,300x500;tvgg=u;page=privacy;fst=u;fet=u;tvgsw=u;tile=3;sz=300x250;ord=4127500236?" target="_blank"><img src="http://ad.doubleclick.net/ad/4186.TVGuide/IASHStandard_Side1;sz=300x250,160x600,120x600,300x500;tvgg=u;page=privacy;fst=u;fet=u;tvgsw=u;tile=3;sz=300x250;ord=4127500236?" width="300" height="250" border="0" alt=""></a></noscript><!-- End ad tag -->
+
+</td>
+<td>
+<span class="programmeheading">TVGuide.co.uk Privacy Policy</span><br>
+<span class="programmetext">
 
 <p>
 </p>
@@ -148,8 +202,7 @@ site.</p>
 
 <p>
 </p>
-<p class="MsoBodyText"><b><!-- span style="font-size:12.0pt;mso-bidi-font-size:10.0pt" -->Do
-you place a cookie on my computer?<!-- /span --></b><!-- span style="font-size:12.0pt;mso-bidi-font-size:10.0pt" --><br>
+<br>
 When you visit our website, we may store some information on your computer. This
 information will be in the form of a "Cookie" or similar file and can
 help us in many ways. For example, Cookies allow us to tailor a website to
@@ -157,15 +210,74 @@ better match your interests and preferences. With most Internet Browsers, you
 can erase Cookies from your computer hard drive, block all Cookies or receive a
 warning before a Cookie is stored. Please refer to your Browser instructions or
 help screen to learn more about these functions.<o:p>
-</o:p></p><p>
+<p>
 </p>
 
 
 <p></p>
-<!--span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;;mso-fareast-font-family:&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:EN-US;mso-bidi-language:AR-SA" -->If you have any further question regarding our policy
-please send an email to <a href="mailto:info@tvguide.co.uk">info@tvguide.co.uk</a><!-- /span -->
-</td></tr></tbody></table>
+If you have any further question regarding our policy
+please contact us using the form at the bottom of our <a href="/comments.asp">feedback page</a>
 
 
+</o:p></span>
+</td>
+<td>
+
+<!-- begin ad tag (tile=4) -->
+
+<script language="JavaScript" src="http://ad.doubleclick.net/adj/4186.TVGuide/IASHStandard_Side2;sz=300x250,160x600,120x600,300x500;tvgg=u;page=privacy;fst=u;fet=u;tvgsw=u;tile=4;sz=300x250;ord=4127500236?" type="text/javascript">
+</script><noscript><a href="http://ad.doubleclick.net/jump/4186.TVGuide/IASHStandard_Side2;sz=300x250,160x600,120x600,300x500;tvgg=u;page=privacy;fst=u;fet=u;tvgsw=u;tile=4;sz=300x250;ord=4127500236?" target="_blank"><img src="http://ad.doubleclick.net/ad/4186.TVGuide/IASHStandard_Side2;sz=300x250,160x600,120x600,300x500;tvgg=u;page=privacy;fst=u;fet=u;tvgsw=u;tile=4;sz=300x250;ord=4127500236?" width="300" height="250" border="0" alt=""></a></noscript><!-- End ad tag -->
+
+</td>
+</tr></tbody></table>
+
+<!-- Start Footer -->
+<table bgcolor="black" width="100%"><tbody><tr><td width="30" height="80"></td><td>
+<span class="programmetext"><a href="/aboutus.asp">ABOUT US</a> | <a href="/advertise.asp">ADVERTISE</a> | <a href="/news.asp">NEWS</a> | <a href="/faq.asp">FAQ</a> | <a href="/privacy.asp">PRIVACY</a> </span><br>
+<span class="programmetext">©2008 <a href="http://www.tvguide.co.uk/">TVGuide.co.uk Ltd TV Listings</a>.  All right reserved &amp; trademarks acknowledged. 
+<a href="http://www.imano.com"> Imano  Online Marketing and Ecommerce</a></span>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-191801-6";
+urchinTracker();
+</script>
+<!-- End Footer -->
+
+<script type="text/javascript" language="JavaScript">
+<!--
+var wl_ord=new Date().getTime();
+document.write('<img  width="1" height="1" src="' + 'http://tu.connect.wunderloop.net/TU/48/1256/5196/?ord=' + wl_ord + '" />');
+//-->
+</script><img width="1" height="1" src="http://tu.connect.wunderloop.net/TU/48/1256/5196/?ord=1580412138625">
+<noscript>
+<img width="1" height="1" src="http://tu.connect.wunderloop.net/TU/48/1256/5196/?ord=12345" />
+</noscript>
+
+
+
+<script language="javascript">
+<!--
+function setHomePage(obj)
+{
+	var thisUrl = "http://www.tvguide.co.uk";
+	obj.style.behavior='url(#default#homepage)'; 
+	obj.setHomePage(thisUrl); 
+	setCookie('TVGuideHomed','true',365);	
+}
+//-->
+</script>
+</td>
+<td>
+<!-- AddThis Bookmark Button BEGIN -->
+<script type="text/javascript">
+  addthis_url    = location.href;   
+  addthis_title  = document.title;  
+  addthis_pub    = 'ravidamani';     
+</script><script type="text/javascript" src="http://s7.addthis.com/js/addthis_widget.php?v=12"></script>
+<!-- AddThis Bookmark Button END -->
+</td>
+</tr></tbody></table>
 
 </body></html>
